# assignments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
life_expectancy/: cleaning.py
