[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
dependencies = ["pandas", "numpy", "scikit-learn", "joblib", "matplotlib", "seaborn"]
authors = [
    {name = "Lourenço Shirley Belo", email = "martinsbelo96@gmail.com"}
]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml", "setuptools"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning"
]
